--- a/doc/note/gopl/第四章 复合数据类型.md
+++ b/doc/note/gopl/第四章 复合数据类型.md
@@ -117,3 +117,9 @@ w.X=8
 ## 4.5 JSON
 
 在json编码时，默认使用结构体的成员名作为Json对象的字段。只有导出的结构体成员才会被编码。
+
+结构体tag可带有`omitempty`选项，表示当结构体成员为空或零值时不生成json对象。
+
+## 4.6 文本和HTML模板
+
+一个模板是一个字符串或一个文件，里面包含了一个或多个由双花括号包含的`{{action}}`对象。
