--- a/doc/note/gopl/第五章 函数.md
+++ b/doc/note/gopl/第五章 函数.md
@@ -81,5 +81,105 @@ if err!=nil{
 > * 当你决定忽略某个错误时，你应该清晰的记录下你的意图
 > * 采用卫语句的方式处理错误
 
+### 5.4.2 文件结尾错误(EOF)
+
+io包保证任何由文件结束引起的读取失败 都返回同一个错误——io.EOF
+
+从标准输入中读取字符，以及判断文件结束：
+
+```go
+in:=bufio.NewReader(os.Stdin)
+for{
+  r,_,err:=in.ReadRune()
+  if err == io.EOF{
+    break //end reading
+  }
+  if err!=nil{
+    return fmt.Errorf("read failed:%v",err)
+  }
+  //...
+}
+```
+
+## 5.5 函数值
+
+在Go中，函数被看作第一类值(first-class values):函数像其他值一样，拥有类型，可以被 赋值给其他变量，传递给函数，从函数返回。
+
+函数类型的零值是nil。调用值为nil的函数值会引起panic错误。
+
+函数值之间是不可比较的，也不能用函数值作为map的key。
+
+## 5.6 匿名函数
+
+通过函数字面量(function literal)，可以在任何表达式中表示一个函数值。函数字面量的语法和函数声明相似，区别在于func关键字后没有函数名。函数值字面量是一种表达式，它的值被成为匿名函数 (anonymous function)。
+
+```go
+strings.Map(func(r rune) rune{return r+1},"HAL-9000")
+```
+
+函数值不仅仅是一串代码，还记录了状态。定义的匿名内部函数可以访问和更新外部函数的局部变量，这意味着匿名函数和外部函数存在变量引用。这就是函数值属于引用类型和函数值不可比较的原因。
+
+Go使用闭包(closures)技术实 现函数值，Go程序员也把函数值叫做闭包
+
+### 5.6.1 警告：捕获迭代变量
+
+```go
+var rmdirs []func()
+for _, d := range tempDirs() {
+  dir := d // NOTE: necessary!
+  os.MkdirAll(dir, 0755) // creates parent directories too 
+  rmdirs = append(rmdirs, func() {
+  	os.RemoveAll(dir) 
+  })
+}
+// ...do some work...
+for _, rmdir := range rmdirs { 
+  rmdir() // clean up
+}
+```
+
+在添加函数值到切片中时，如果按照如下的写法，会出问题：
+
+```go
+for _, dir := range tempDirs() {
+  os.MkdirAll(dir, 0755) // creates parent directories too 
+  rmdirs = append(rmdirs, func() {
+  	os.RemoveAll(dir) 
+  })
+}
+```
+
+因为内部匿名函数记录的是循环变量dir的地址，而不是值，所以循环结束后，每个匿名函数中的dir都是一致的，指向最后的目录，所以删除的都是同一个目录。
+
+通常，为了解决这个问题，我们会引入一个与循环变量同名的局部变量，作为循环变量的副本。
+
+## 5.7 可变参数
+
+```go
+func sum()(vals...int){
+  //...
+}
+```
+
+函数内部，可变参数被看作是切片。
+
+## 5.8 Deferred函数
+
+需要在调用普通函数或方法前加上关键字`defer`，就完成了`defer`所需要的语法。当`defer`语句被执行时，跟在`defer`后面的函数会被延迟执行。直到包含该`defer`语句的函数执行完毕时， `defer`后的函数才会被执行，不论包含`defer`语句的函数是通过`return`正常结束，还是由于`panic`导致的异常结束。你可以在一个函数中执行多条`defer`语句，它们的执行顺序与声明顺序相反。
+
+`defer`语句经常被用于处理成对的操作，如打开、关闭、连接、断开连接、加锁、释放锁。通过defer机制，不论函数逻辑多复杂，都能保证在任何执行路径下，资源被释放。
+
+> 规范：释放资源的 defer应该直接跟在请求资源的语句后
+
+## 5.9 painc异常
+
+当panic异常发生时，程序会中断运行，并立即执行在该goroutine中被延迟的函数，随后程序崩溃并输出日志信息。
+
+直接调用内置的`panic`函数也会引发`panic`异常
+
+panic一般用于**严重的错误**，对于大部分的bug，都应使用错误机制。
+
+## 5.10 Recover捕获异常
+
 
 
