--- a/doc/note/gopl/第七章 接口.md
+++ b/doc/note/gopl/第七章 接口.md
@@ -2,3 +2,64 @@
 
 ## 7.1 接口约定
 
+## 7.5 接口值
+
+一个接口的值，接口值，由两个部分组成：
+
+* 一个具体的类型
+* 那个类型的值
+
+它们被称为接口的动态类型和动态值。
+
+一个接口的零值就是它的类型和值的部分都是`nil`
+
+可通过`interface==nil`判断一个接口值是否为空，调用一个空接口值上的任意方法都会产生panic
+
+一个接口值可以持有任意大的动态值
+
+接口值可以使用==和!=来进行比较。两个接口值相等**仅当它们都是nil值或者它们的动态类型相同并且动态值也根据这个动态类型的==操作相等**。因为接口值是可比较的，所以它 们可以用在map的键或者作为switch语句的操作数。
+
+## 7.6 sort.Interface接口
+
+sort包内置了一些排序功能的函数。
+
+Go语言的`sort.Sort`函数不对具体的序列和元素做任何假设，使用接口类型`sort.Interface`指定通用的排序算法和可能被排序到的序列类型之间的约定。
+
+一个内置的排序算法需要知道三个东西:序列的长度，表示两个元素比较的结果，一种交换 两个元素的方式：
+
+```go
+package sort
+
+type Interface interface{
+  Len() int
+  Less(i,j int) bool  //i,j是序列中元素的下标
+  Swap(i,j int)
+}
+```
+
+需要定义一个实现了这三个方法的类型，然后对这个类型的一个 实例应用sort.Sort函数
+
+## 7.8 error接口
+
+```go
+type error interface{
+  Error() string
+}
+```
+
+## 7.10 类型断言
+
+类型断言是一个使用在接口值上的操作。语法上它看起来像`x.(T)`被称为断言类型，这里x表示一个接口的类型，T表示一个类型。一个类型断言检查它操作对象的动态类型是否和断言的类型匹配。
+
+```go
+var w io.Writer
+w = os.Stdout
+f :=w.(*os.File)    //success: f==os.Stdoutuf
+f:=w.(*bytes.Buffer) // panic :interface holds *os.File, not *bytes.Buffer
+```
+
+断言结果：
+
+* 如果断言的类型T是一个具体类型，则类型断言检查x的动态类型是否和T相同。如果检查成功，类型断言的结果是x的动态值，类型是T。即，具体类型的类型断言从它的操作对象中获得具体的值。如果检查失败，这个操作会抛出panic。
+* 如果断言的类型T是一个接口类型，则类型断言检查x的动态类型是否满足T。 如果检查成功，动态值没有获取到，这个结果仍然是一个有相同类型和值部分的接口值，但是结果有类型T。即，对一个接口类型的类型断言改变了类型的表述方式，改变了可以获取的方法集合(通常更大)，但是它保护了接口值内部的动态类型和值的部分
+* 如果断言操作的对象是一个nil接口值，那么不论被断言的类型是什么这个类型断言都会失败
